fixed: z-index ninja-keys

--- a/src/renderer/App.sass
+++ b/src/renderer/App.sass
@@ -4,6 +4,9 @@ main
   @include flexVert
   overflow: auto
 
+ninja-keys
+  z-index: $zNinja
+
 footer
   flex: none
   color: var(--textColor2)
